Fix appearing scrollbar

--- a/index.css
+++ b/index.css
@@ -36,16 +36,19 @@ body > ul {
     list-style: none;
     margin: 2em auto;
     padding: 0em;
+    width: 50%;
 }
 
 body > ul > li {
     padding: 1em;
+    width: 100%;
 }
 
 body > ul > li > a{
     text-align: center;
     text-decoration: none;
     font-size: 2em;
+    width: 0em;
 }
 
 body > ul > li > a > span {
